Fix alignment on sidebar nav items

--- a/frontend/src/components/Sidebar/Sidebar.module.scss
+++ b/frontend/src/components/Sidebar/Sidebar.module.scss
@@ -168,6 +168,7 @@
     font-size: 15px;
     font-weight: 400;
     line-height: 1;
+    margin: 0 !important;
     margin-left: 15px !important;
 }
 
